--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <ul>
           <li>git status: checks what branch we are currently on.</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it.</li>
+          <li>git mkdir: create new directory</li>
         </ul>
    
       </section>
