--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <li>git status: checks what branch we are currently on.</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it.</li>
           <li>git mkdir: create new directory</li>
+          <li>Short, detailed commit messages are important for tracking changes.</li>
         </ul>
    
       </section>
